# crowdsec-blocklist-import

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  ROADMAP.md  STATE.md  blocklist_import.py  docker-compose.yml  grafana-dashboard.json  import.sh  install.sh  pyproject.toml  requirements.txt  setup_wizard.py  test_blocklist_import.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
docs/: config-reference.md  examples.md  faq.md  migration-from-bash.md  troubleshooting.md
