[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdsec-blocklist-import"
version = "3.5.0"
description = "Memory-efficient importer for 28+ public threat feeds into CrowdSec via LAPI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "wolffcatskyy"},
]
keywords = ["crowdsec", "blocklist", "threat-intelligence", "firewall", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]

dependencies = [
    "requests>=2.28.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
metrics = [
    "prometheus-client>=0.17.0,<1.0.0",
]
all = [
    "crowdsec-blocklist-import[metrics]",
]

[project.urls]
Homepage = "https://github.com/wolffcatskyy/crowdsec-blocklist-import"
Repository = "https://github.com/wolffcatskyy/crowdsec-blocklist-import"
Changelog = "https://github.com/wolffcatskyy/crowdsec-blocklist-import/blob/main/CHANGELOG.md"
Issues = "https://github.com/wolffcatskyy/crowdsec-blocklist-import/issues"

[project.scripts]
crowdsec-blocklist-import = "blocklist_import:main"

[tool.setuptools]
py-modules = ["blocklist_import"]
